2021-03-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Added missing processing of the --inetproto option
	* check_ssl_cert (main): Using grep -F when possible

2021-02-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Do not check SCTs if the certificate is self signed

2021-02-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): fixed the SCT check

2021-02-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Check for TLS renegotiation

2021-02-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Do not reset $OPENSSL so that a different
                                 OpenSSL version can be specified with the environment variable

2021-02-17  Robin Pronk  <robin.pronk@nedap.com>

	* check_ssl_cert: Make HTTP request url configurable (default stays /)

2021-02-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Adds a check for grep (to check if basic utilities are in the PATH)

2021-01-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Checks for signed certificate timestamps (SCTs)
	* check_ssl_cert (fetch_certificate): Better error catching for s_client errors

2021-01-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (hours_until): Warning about BusyBox date dropping the time zone

2021-01-26  Matteo Corti  <corti@matteo.ethz.ch>

	* check_ssl_cert: added --date to specify the date binary
	* check_ssl_cert (hours_until): support for BusyBox date

2021-01-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): Better handling of wait and kill output

2021-01-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): Execute timeout in the background so that it can handle signals
	* check_ssl_cert (fetch_certificate): Better error message for DH with a too small key and handshake failure
	* check_ssl_cert (check_crl): Checks revokation via CRL

2021-01-15  Matteo Corti  <matteo@corti.li>
