@@ -108,3 +108,4 @@ Thanks:
 * Many thanks to cbiedl (https://github.com/cbiedl) for the proxy patch
 * Many thanks to Robin Schneider (https://github.com/ypid-geberit) for the --long-output all patch
 * Many thanks to Robin Pronk (https://github.com/rfpronk) for the -u patch
+* Many thanks to tunnelpr0 (https://github.com/tunnelpr0) fot --inetproto patch
