@@ -1207,8 +1207,30 @@ fetch_certificate() {
     elif [ -n "${FILE}" ] ; then
 
         if [ "${HOST}" = "localhost" ] ; then
-            exec_with_timeout "${TIMEOUT}" "/bin/cat '${FILE}' 2> ${ERROR} 1> ${CERT}"
-            RET=$?
+
+            debuglog "check if we have to convert the file ${FILE} to PEM"
+            debuglog "certificate type (1): $(${FILE_BIN} "${FILE}" | sed 's/.*://' )"
+
+            if echo "${FILE}" | grep -q -E '[.](p12|pfx)$' ; then
+
+                debuglog 'converting PKCS #12 to PEM'
+                "${OPENSSL}" pkcs12 -in "${FILE}" -out "${CERT}" -nokeys
+
+            elif "${FILE_BIN}" "${FILE}" | grep -F -q 'Certificate, Version=3' ; then
+
+                debuglog 'converting DER to PEM'
+                "${OPENSSL}" x509 -inform der -in "${FILE}" -out "${CERT}"
+                
+            else
+
+                /bin/cat "${FILE}" > "${CERT}"
+                RET=$?
+
+            fi
+                
+            debuglog "storing the certificate to ${CERT}"
+            debuglog "certificate type (2): $(${FILE_BIN} "${CERT}" | sed 's/.*://' )"
+            
         else
             unknown "Error: option 'file' works with -H localhost only"
         fi
