@@ -1,5 +1,6 @@
 2021-03-09 Version 1.141.0: Do not check SCTs if the certificate is self signed
                             Fixed the processing of --inetproto
+                            Supports local PCKS #12 and DER formatted certificates
 2021-02-25 Version 1.140.0: Fixed a bug in the SCT check
 2021-02-24 Version 1.139.0: Fixed a bug in the TLS renegotiation check
 2021-02-24 Version 1.138.0: Checks for TLS renegotiation
